# MAGE-Doc

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: collections.py  documents.py  health.py  tools.py  v2.py  v3.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  document.py  evidence.py  graph.py  page.py  trace.py  v2.py
backend/app/schemas/: __init__.py  agent.py  claim_verification.py  document.py  evidence.py  evidence_pack.py  graph.py  page.py  pipeline.py  tools.py  trace.py  v2.py  v3.py
backend/app/services/: agent.py  claim_verification.py  documents.py  evidence.py  evidence_pack.py  graph.py  pages.py  pipeline.py  retrieval.py  tool_registry.py  trace_store.py  v2_collections.py  v2_failure_diagnosis.py  v2_mcp.py  v2_metric.py  v2_ocr.py  v2_vision.py  v3_failure_taxonomy.py  v3_repair_policy.py  v3_report_export.py  v3_self_correcting_agent.py  v3_sufficiency.py
backend/app/tests/: test_agent.py  test_claim_verification.py  test_documents.py  test_eval_harness.py  test_evidence.py  test_evidence_pack.py  test_graph.py  test_health.py  test_pages.py  test_pipeline.py  test_retrieval.py  test_tables.py  test_trace_store.py  test_v2_multimodal.py  test_v2_platform.py  test_v3_reliability.py
docs/: batch1-implementation-plan.md  development-plan.md  development-workflow.md  outline-design.md  requirements.md  version-roadmap.md
eval/: README.md  benchmark_adapter.py  (+2 more)
(+80 files in other folders)
