[project]
name = "magedoc-backend"
version = "0.1.0"
description = "FastAPI backend for MAGE-Doc."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pymupdf>=1.24.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
